@@ -859,11 +859,9 @@ started these clone on 12th of July, 2019
 [uuk]: added config option for fog distance
 [github]: released snapshot 20w10a
 [uuk]: changed code from using the tmp-directory located in project-home to use the tempfile-library (see #5)
+[uuk]: re-implemented API for creating custom block renderers
 
 new blocks planned for upcoming snapshot(s):
-    todo: re-implement custom renderers or implement an IBlockRenderer class, an IBatchBlockRenderer and
-        IDynamicBlockRenderer providing the draw, show and hide functions
-
     todo: fix issue 113-119 [if possible]
 
     todo: implement possibility to add custom model loaders
